--- a/css/styles.css
+++ b/css/styles.css
@@ -491,6 +491,7 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: inherit;
+    color: var(--fourth-font-color);
 
     width: 358px;
     height: 50px;
